fix note window overflow

--- a/src/components/styles/NotesWindow.css
+++ b/src/components/styles/NotesWindow.css
@@ -1,9 +1,3 @@
-/* AxonRollYourOwnColorSchemeConstructionSet.tsx: */
-/* modify this value right here to change the color of the note window */
-/* :root {
-    --note-window-color: #384764;
-} */
-
 /* Styling for the window */
 .panel {
     display: flex;
